Fixed z-index for menu

--- a/src/less/mixins/dropdown/base/dropdown-mixins.less
+++ b/src/less/mixins/dropdown/base/dropdown-mixins.less
@@ -9,7 +9,7 @@
 .dropdown-overlay-constraints() {
     max-height: 400px;
     overflow-y: auto;
-    z-index: 1;
+    z-index: 2;
 }
 
 .dropdown-overlay() {
